# Neural-Digit-Recognizer

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  test.cpp  test.h  test_activation.cpp  test_activation.h  test_dense.cpp  test_dense.h  test_matrix.cpp  test_matrix.h
